edit swagger
